--- a/.env.example
+++ b/.env.example
@@ -13,18 +13,20 @@ GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 GITHUB_ACCESS_TOKEN=
 
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
 # -----------------------------------------------------------------------------
 # Database (MySQL - PlanetScale)
 # -----------------------------------------------------------------------------
-DATABASE_URL="mysql://root:root@localhost:3306/taxonomy?schema=public"
+# DATABASE_URL="mysql://admin:admin@localhost:3306/taxonomy?schema=public"
+DATABASE_URL='postgresql://admin:admin@localhost:26257/postgres?schema=careerpage&sslmode=verify-full'
 
 # -----------------------------------------------------------------------------
-# Email (Postmark)
+# Email (aws ses)
 # -----------------------------------------------------------------------------
+SMTP_SERVER=
 SMTP_FROM=
-POSTMARK_API_TOKEN=
-POSTMARK_SIGN_IN_TEMPLATE=
-POSTMARK_ACTIVATION_TEMPLATE=
 
 # -----------------------------------------------------------------------------
 # Subscriptions (Stripe)
@@ -32,3 +34,4 @@ POSTMARK_ACTIVATION_TEMPLATE=
 STRIPE_API_KEY=
 STRIPE_WEBHOOK_SECRET=
 STRIPE_PRO_MONTHLY_PLAN_ID=
+
